@@ -7,4 +7,13 @@
 
 TAO_DdsDcps_Export unsigned int TAO::DCPS::DCPS_debug_level = 0;
 
+namespace TAO {
+    namespace DCPS {
 
+TAO_DdsDcps_Export void set_DCPS_debug_level(unsigned int lvl)
+{
+  TAO::DCPS::DCPS_debug_level = lvl;
+}
+
+    }; // DCPS
+}; // TAO
