@@ -26,6 +26,10 @@ namespace TAO
     /// 10 - logs that may happen more than once per sample write/read
     extern TAO_DdsDcps_Export unsigned int DCPS_debug_level;
 
+    /// The proper way to set the DCPS_debug_level.
+    /// This function allows for possible side-effects of setting the level.
+    extern void TAO_DdsDcps_Export set_DCPS_debug_level(unsigned int lvl);
+
   } // namespace TAO
 } // namespace DCPS
 
