@@ -1,3 +1,11 @@
+Wed May 16 15:09:05 UTC 2007  Scott Harris  <harris_s@ociweb.com>
+        
+        * dds/DCPS/debug.cpp:
+        * dds/DCPS/debug.h:
+        * dds/DCPS/Service_Participant.cpp:
+
+          Create a function to set the DCPS_debug_level.
+
 Tue May 15 19:39:55 UTC 2007  Ciju John  <johnc at ociweb dot com>
 
         * dds/InfoRepo/DCPSInfoRepo.cpp:
